# lzss

./: .gitignore  Cargo.toml  test.sh
src/: decoder.rs  encoder.rs  history_reader.rs  lib.rs  main.rs  search.rs
test-files/: Cargolock-copy  Cargotoml-copy  test.sh
