[package]
name = "lzss"
version = "0.1.0"
authors = ["Tadas <vtadas25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
bitbit = "~0.2.0"
slice-deque = "0.3.0"

[dev-dependencies]
rand = "0.7.2"